<resources>
    <string name="app_name">CinemApp</string>
    <string name="klik">Klik</string>
    <string name="all_cinema">All Cinema</string>
    <string name="view_all">View All</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="title_activity_all_movie">All Cinema</string>
    <string name="title_movie_favorite">Favorite Cinema</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cinemapp">CinemApp</string>

    <string name="username">Username</string>
    <string name="choice_your_favorite">Choice Your Favorite</string>
    <string name="cinema">Cinema</string>
    <string name="favorite">Favorite</string>
    <string name="_0">0</string>
    <string name="save_your_favorite_cinema">Save your favorite cinema</string>
    <string name="login">Login</string>
</resources>