<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bintang.Main.Home.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_poster" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginStart="14dp"
        android:visibility="invisible"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_cinema" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_movie"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_cinema">

        <include layout="@layout/shimmer_layout" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/all_cinema"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/movie"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/allView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/view_all"
        app:layout_constraintBottom_toTopOf="@+id/movie"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_top_whitenew"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/choice_your_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_0"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_total_desc"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_total_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cinema"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_favorite_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/favorite"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/tv_total_desc" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_0"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_favorite_desc"
        app:layout_constraintStart_toEndOf="@+id/tv_total_desc" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/save_your_favorite_cinema"
        android:textColor="#F6EEEE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_total"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_user"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

